Fixed button positioning on small window sizes.

--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -146,6 +146,13 @@ button:active {
   box-shadow: none;
 }
 
+button#save-settings {
+  position: absolute;
+  bottom: 45px;
+  left: 50%;
+  margin-left: -87px;
+}
+
 .switch {
   position: relative;
   display: inline-block;
